# fedacq-rag-chatbot

./: .dockerignore  .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_Simplified.md  pyproject.toml  requirements.txt  requirements_graph.txt
.github/workflows/: local-deploy.yml
app/: __init__.py  api.py  config.py  wsgi.py
chroma/: chroma.sqlite3
data/chroma/: chroma.sqlite3
data/chroma/4e5e4c70-e806-4f06-93b5-5074a1223e85/: index_metadata.pickle
data/chroma/6575089c-1320-4290-bc18-a6884f89e479/: index_metadata.pickle
data/chroma/7befcf88-75cc-4bf8-9116-b7b3fff27b48/: index_metadata.pickle
data/chromadb/: chroma.sqlite3
data/lightrag/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
docker/: docker-compose.yml  local.env.example
rag/: __init__.py
rag/indexing/: __init__.py  builder.py  loader.py
rag/llm/: __init__.py  models.py
rag/retrieval/: __init__.py  metadata.py  parser_dita.py  query_engine.py
scripts/: build_index.py
src/app/: __init__.py  api.py  asgi.py  config.py  wsgi.py
src/app/static/: app.js  index.html  style.css  styles.css
src/rag/: cache.py  config.py
src/rag/indexing/: builder.py  loader.py
src/rag/llm/: models.py  phi4_onnx_llm.py
src/rag/retrieval/: dummy_embed.py  factory.py  graph_lightrag.py  metadata.py  parser_dita.py  query_engine.py  reranker.py
src/scripts/: build_graph.py  build_graph_gpu.py  build_index.py
tests/: conftest.py  pytest.ini  test_api.py  test_config.py  test_indexing.py  test_llm.py  test_metadata.py  test_parser.py  test_query_engine.py  test_query_engine_load.py  test_rag_modes.py
