[project]
name = "fedacq-rag-chatbot"
version = "0.1.0"
description = "FAR/DFARS RAG chatbot"
requires-python = ">=3.10, <=3.13"

dependencies = [
    "chromadb==1.5.8",
    "Flask==3.1.3",
    "gitpython==3.1.50",
    "huggingface-hub==0.36.2",
    "hypercorn==0.17.3",
    "llama-index==0.14.12",
    "lxml==6.1.0",
    "onnxruntime==1.20.1",
    "onnxruntime-genai==0.5.2",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "sentencepiece==0.2.1",
    "tqdm==4.67.3",
    "transformers==4.41.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
